Issue #19881: Fix bad pickling of large bytes in cpickle.